# cachelibArchive

./: .gitignore  .gitmodules  CMakeLists.txt  Client.cpp  README.md  Server.cpp  bench.py  nohup.out  shm_test.cpp
CachelibHeader/: cachelibHeader.cpp  cachelibHeader.h
ClientAPI/: clientAPI.cpp  clientAPI.h
MessageInstruct/: messageInfo.cpp  messageInfo.h
RemoteSchedule/: bench.py  communicate_module.py  findOptimal.py  loop  resource_management.py
YCSBC/: YCSBC.cpp  YCSBC.h  zipfian
backend/: .gitignore  CMakeLists.txt  readme.md
backend/src/: common.h  main.cpp
backend/src/backend/: LevelDBBackend.cpp  LevelDBBackend.h  MongoDBBackend.cpp  MongoDBBackend.h  MysqlBackend.cpp  MysqlBackend.h  SQLiteBackend.cpp  SQLiteBackend.h  TmdbBackend.cpp  TmdbBackend.h  backend.cpp  backend.h
backend/src/benchmarks/: YCSBBenchmark.cpp  YCSBBenchmark.h  benchmark.cpp  benchmark.h  config.h
backend/src/cache/: AutoIncCache.cpp  AutoIncCache.h  clientAPI.cpp  clientAPI.h  local_clientAPI.cpp
backend/src/config/: leveldb_hotspot_test.h  tmdb_uniform_test.h
backend/src/utils/: cache_utils.h  debug.h  percentile.h  randstring.h  save_vector.h  zipfian.h
clientserver/: config.h
clientserver/cachelibheader/: cachelibHeader.cpp  cachelibHeader.h
clientserver/clientserver/: clientAPI.cpp  clientAPI.h  server.cpp  shm_util.h
clientserver/src/cachelibheader/: cachelibHeader.cpp
schedule/: bench.py  clean.sh  loop.cpp  resource_management.py  run.sh  util.py
script/: EndServer.py  analyze_latency.py  build.sh  clean.sh  log2csv.py  plot_scatter.py  setbandwidth.sh  tmdb_parallel.sh
sharedMem/: server.cpp  shm_util.h
sharedMem/ClientAPI/: clientAPI.cpp  clientAPI.h
simpletest/: main  main.cpp
simpletest/TestCachelib/: CMakeLists.txt  main.cpp  readme.md
simpletest/TestFolly/: CMakeLists.txt  build.sh  main.cpp
simpletest/TestPoolResize/: CMakeLists.txt  main.cpp  zeropool.cpp
simpletest/TestReadCache/: common.cpp  common.h  config.cpp  config.h  page_cache.cpp  page_cache.h
tmdb/: LICENSE  README.md
tmdb/src/: .tmdb.h.swp  CMakeLists.txt  Makefile  README  simpleTest.c  tm_util.c  tm_util.cpp  tm_util.h  tmdb.c  tmdb.cpp  tmdb.h  tmdb_test.c  tmdb_test.cpp
